--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ 
  /* Variables CSS */
  :root {
     --primary-color: #2563eb;
@@ -18,7 +20,7 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Poppins", sans-serif;
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--light-color);
@@ -110,7 +112,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: white;
+    background-image: linear-gradient(rgb(166, 166, 177),steelblue);
+    color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     transition: var(--transition);
@@ -128,7 +131,7 @@ header.scrolled {
     padding: 20px 0;
 }
 
-.logo {
+/* .logo {
     font-size: 1.8rem;
     font-weight: 700;
     color: var(--primary-color);
@@ -139,6 +142,15 @@ header.scrolled {
 .logo i {
     margin-right: 10px;
     font-size: 2rem;
+} */
+ .nav__logo{
+    width: 200px;
+    height: 100%;
+ }
+ .nav__img{
+    width: 100%;
+    height: 100%;
+    
 }
 
 .nav-links {
@@ -176,7 +188,7 @@ header.scrolled {
 /* Hero section */
 .hero {
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('img/fondo.jpg') no-repeat center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/fondo.jpg') no-repeat center center/cover;
     color: white;
     display: flex;
     align-items: center;
@@ -397,7 +409,9 @@ footer {
     gap: 30px;
     margin-bottom: 40px;
 }
-
+.footer-col span{
+    font-size: 1.2rem;
+}
 .footer-col h3 {
     font-size: 1.3rem;
     margin-bottom: 20px;
