--- a/css/estilos_tabla.css
+++ b/css/estilos_tabla.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root{
-    --height-nav:70px;
+   --height-nav:100px;
 }
 *{
     margin: 0;
@@ -11,6 +13,20 @@ body{
     background: #f2f2f2;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+
+}
+
+ul {
+    list-style: none;
+}
+
+img {
+    max-width: 100%;
+}
+
 .container{
     width: 90%;
     max-width: 1200px;
@@ -18,7 +34,7 @@ body{
     overflow: hidden;
 }
 .nav{
-    background: #143d64;
+     background:  linear-gradient(rgb(166, 166, 177),steelblue);
     height: var(--height-nav);
     color: #fff;
 }
@@ -29,75 +45,37 @@ body{
     align-items: center;
     
 }
-
 .nav__link{
-    text-decoration: none;
+    
     color: #fff;
     margin-left: 1em;
 }
-.hero__main{
-    display: flex;
-    height: calc(100vh - var(--height-nav));
-    align-items: center;
-    min-height: 600px;
-}
-.hero__texts{
-    flex: 1;
-}
-.hero__picture{
-    flex: 1;
-}
-.hero__img{
-    width: 100%;
-    max-width: 450px;
+.nav__img{
     display: block;
-    margin: 0 auto;
 }
-.hero__title{
-    font-size: 3rem;
-}
-.hero__paragraph{
-    font-size: 1.5rem;
-    font-weight: 300;
-}
-.cta{
-    background: #5c63ff;
-    display: inline-block;
-    padding: 15px 30px;
-    margin-top: 1.5em;
-    color:#fff;
-    text-decoration: none;
-    border-radius: 6px;
 
-}
 @media screen  and (max-width:900px){
     :root{
         --height-nav:100px;
     }
-    .nav__container{
+      .nav__container{
         flex-direction: column;
         justify-content: space-evenly;
+        
     }
-    .hero__main{
-        flex-direction: column;
-        padding: 40px 0;
+    
+}
+@media screen  and (max-width:768px){
+    .nav{
+         --height-nav:120px;
     }
-    .hero__picture{
-        order: -1;
-    }
-    .hero__img{
-        max-width: 380px;
-    }
-    .hero__texts{
+   .nav__links{
+    
+        font-size: 0.8rem;
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-    }
-    .hero__title{
-        font-size: 2.5rem;
-    }
-    .hero__paragraph{
-        font-size: 1rem;
-    }
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-content: center;
+   }  
+    
 }
